--- a/cafe/templates/index.html
+++ b/cafe/templates/index.html
@@ -36,6 +36,6 @@
         </div>
     </div>
 </div>
-<script src="{% static 'static/index.js' %}"></script>
+<script src="{% static 'index.js' %}"></script>
 </body>
 </html>
