--- a/cafe/templates/lobby.html
+++ b/cafe/templates/lobby.html
@@ -5,16 +5,33 @@
     <title>Lobby</title>
 </head>
 <body>
-<h1>Let's Chat</h1>
-<script type="text/javascript">
+    <h1>Let's Chat</h1>
+    <div id="error-container">
+        <h1>Error</h1>
+        <p id="error-message"></p>
+    </div>
+    <script type="text/javascript">
+        try {
+            console.log('Hello, world!')
+            let url = "ws://" + window.location.host + "/ws/socket-server/"
+            const chatsocket = new WebSocket(url)
 
-    let url = "wss://" + window.location.host + "/ws/socket-server/"
-    const chatsocket = new  WebSocket(url)
-    chatsocket.onmessage = function(e){
-    let data = JSON.parse(e.data)
-    console.log("Data:",data)
-    }
-</script>
+            chatsocket.onopen = function (e) {
+                console.log("Connection established")
+            }
 
+            console.log('Hello, world!')
+
+            chatsocket.onmessage = function (e) {
+                let data = JSON.parse(e.data)
+                console.log("Data:", data)
+            }
+        } catch (error) {
+            console.error("An error occurred:", error);
+            // Display the error message in the body
+            document.getElementById('error-container').style.display = 'block'; // Show the error container
+            document.getElementById('error-message').innerHTML = error.message;
+        }
+    </script>
 </body>
 </html>
