--- a/cafe/templates/lobby.html
+++ b/cafe/templates/lobby.html
@@ -22,7 +22,7 @@
 <script type="text/javascript">
     try {
         console.log('Hello, world!')
-        let url = 'ws://' + window.location.host + '/ws/socket-server/'
+        let url = 'wss://' + window.location.host + '/ws/socket-server/'
         const chatsocket = new WebSocket(url)
 
         chatsocket.onopen = function (e) {
